--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
       "esModuleInterop": true,
+      "target": "es6",
       "module": "es6",
       "moduleResolution": "node",
       "outDir": "dist"
