--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
-        "dev": "nodemon src/index.ts"
+        "dev": "nodemon src/index.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
         "@faker-js/faker": "^7.5.0",
