--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "start": "node dist/index.js",
+        "start": "ts-node src/index.ts",
         "dev": "nodemon src/index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
