--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
         "@types/express": "^4.17.13",
         "@types/pg": "^8.6.5",
         "cors": "^2.8.5",
+        "cryptr": "^6.0.3",
         "dayjs": "^1.11.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-async-errors": "^3.1.1",
         "joi": "^17.6.0",
         "nodemon": "^2.0.19",
-        "pg": "^8.8.0" 
+        "pg": "^8.8.0"
     },
     "devDependencies": {
-      "ts-node": "^10.9.1",
-      "typescript": "^4.8.2"
+        "ts-node": "^10.9.1",
+        "typescript": "^4.8.2"
     }
 }
